Archive2/4b/72d732729a05af/output
main.cpp:16:7: error: object of type 'Foo' cannot be assigned because its copy assignment operator is implicitly deleted
    f = GetFoo();
      ^
main.cpp:4:5: note: copy assignment operator is implicitly deleted because 'Foo' has a user-declared move constructor
    Foo( Foo && );
    ^
1 error generated.
